flux/infrastructure/webapps/home-assistant/services.yaml
# Services for Home Assistant and sidecars
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: webapps
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: webapps
spec:
  selector:
    app: home-assistant
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: webapps
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 6052
      targetPort: 6052
