flux/infrastructure/webapps/home-assistant/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: webapps
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`ha.becklab.cloud`)
    middlewares:
    - name: sso-admin-chain-no-auth-header
      namespace: identity
    services:
    - name: home-assistant
      port: 8123
  - kind: Rule
    match: Host(`ha.becklab.cloud`) && PathPrefix(`/esphome`)
    middlewares:
    - name: sso-admin-chain-no-auth-header
      namespace: identity
    - name: esphome-strip-prefix
    services:
    - name: esphome
      port: 6052
  - kind: Rule
    match: Host(`ha.becklab.cloud`) && Path(`/api/websocket`)
    services:
    - name: home-assistant
      port: 8123
  - kind: Rule
    match: Host(`ha.becklab.cloud`) && PathPrefix(`/mqtt`)
    middlewares:
    - name: mqtt-strip-prefix
    services:
    - name: mosquitto
      port: 9001
  tls:
    secretName: ha-tls
